#1 terminate cleanly (remove lock file)
- add clean steps in makefile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,5 +24,10 @@ add_custom_target(deliver ALL
 	COMMENT "Deliver addtional stuffs"
 )
 
+# clean targets
+add_custom_target(clean-all
+   COMMAND ${CMAKE_BUILD_TOOL} clean
+)
+
 add_subdirectory(locker)
 
