--- a/locker/CMakeLists.txt
+++ b/locker/CMakeLists.txt
@@ -25,5 +25,5 @@ add_custom_target(clean_locker
 	COMMAND ${CMAKE_COMMAND}  -DCLEAN=1 -DOUT_DIR=${CMAKE_RUNTIME_OUTPUT_DIRECTORY} -DBIN_NAME=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${LOCKER_BIN} -P ${PROJECT_SOURCE_DIR}/cmake/deliver.cmake
 	COMMENT "Clean Backend Locker"
 )
-add_dependencies(clean-all clean_locker)
+add_dependencies(distclean clean_locker)
 
