Install catalog with regex

--- a/catalog/CMakeLists.txt
+++ b/catalog/CMakeLists.txt
@@ -1,6 +1,10 @@
 
+# all catalogs must have predefined name template
+# find all catalogs
+file(GLOB CATALOG_LIST ${CMAKE_CURRENT_SOURCE_DIR}/files/catalog_v*.json)
+	 
 install(
-	FILES ${CMAKE_CURRENT_SOURCE_DIR}/files/catalog_v1.json
+	FILES ${CATALOG_LIST}
 	DESTINATION ${PROJECT_CONFIG_DIR}/catalog
 	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
 	
