--- a/catalog/CMakeLists.txt
+++ b/catalog/CMakeLists.txt
@@ -6,5 +6,6 @@ file(GLOB CATALOG_LIST ${CMAKE_CURRENT_SOURCE_DIR}/files/catalog_v*.json)
 install(
 	FILES ${CATALOG_LIST}
 	DESTINATION ${PROJECT_CONFIG_DIR}/catalog
-	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
+)
 	
