Build tree view example
- add macro to deliver several targets
- do package at the end

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,12 @@ if(CMAKE_VERSION VERSION_LESS "3.7.0")
     set(CMAKE_INCLUDE_CURRENT_DIR ON)
 endif()
 
-find_package(Qt5 COMPONENTS Core REQUIRED)
+find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
 
 # some additional settings
 add_definitions(-Wall -Werror)
+
+include(cmake/macros.cmake)
 
 # define custom output dirs
 set(PROJECT_CONFIG_DIR ${CMAKE_INSTALL_PREFIX}/etc)
@@ -37,3 +39,11 @@ add_custom_target(distclean
 add_subdirectory(locker)
 add_subdirectory(catalog)
 
+##
+get_filename_component(RELARCHIVE ${CMAKE_INSTALL_PREFIX} NAME)
+add_custom_target(do_package
+	COMMAND bash -c "tar -cf ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.tar.bz2 -C ${CMAKE_BINARY_DIR}/ ./${RELARCHIVE}/ "
+	DEPENDS deliver
+	WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/
+	COMMENT "Do final Archive"
+)
