Install more stuffs
- relocate resource files out of source dir
- install plugins and main batch file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ message(STATUS "CYGWIN: " ${CYGWIN})
 message(STATUS "WINDOWS: " ${WIN32})
 
 set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-set(CMAKE_AUTOUIC ON)
+# set(CMAKE_AUTORCC ON)
+# set(CMAKE_AUTOUIC ON)
 
 if(CMAKE_VERSION VERSION_LESS "3.7.0")
     set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -39,7 +39,17 @@ add_custom_target(distclean
 add_subdirectory(locker)
 add_subdirectory(catalog)
 
-##
+## DELIVER
+add_custom_target(deliv_final
+	COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_INSTALL_PREFIX}/plugins/platforms
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_FIND_ROOT_PATH}/lib/qt5/plugins/platforms/qwindows.dll ${CMAKE_INSTALL_PREFIX}/plugins/platforms
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/files/catalog.bat ${CMAKE_INSTALL_PREFIX}
+	WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/
+	COMMENT "Deliver Qt plugins"
+)
+add_dependencies(deliver deliv_final)
+
+## PACKAGE
 get_filename_component(RELARCHIVE ${CMAKE_INSTALL_PREFIX} NAME)
 add_custom_target(do_package
 	COMMAND bash -c "tar -cf ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.tar.bz2 -C ${CMAKE_BINARY_DIR}/ ./${RELARCHIVE}/ "
